# rust-routeviews

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: rust.yml
src/: element.rs  lib.rs  record.rs  stream.rs
tests/: parse_updates_from_yesterday.rs
