[package]
name = "bgpstream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
libbgpstream-sys = "0.2.1"
thiserror = "1.0.50"
time = { version = "0.3.30", features = ["macros"] }
itertools = "0.11.0"
