[package]
name = "routeviews"
version = "0.1.0"
edition = "2021"
authors = ["Tibor Schneider <tiborschneider@bluewin.ch>"]
license = "MIT OR Apache-2.0"
description = "Read BGPStream data as an iterator"
readme = "README.md"
repository = "https://github.com/tiborschneider/rust-routeviews"
keywords = ["BGP", "BGPstream"]
categories = ["network-programming"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ipnet = "2.9.0"
libbgpstream-sys = { git = "https://github.com/brendanhoran/libbgpstream-sys", rev = "7361491993b3cd603463140e9d53cb7f8b778955" }
thiserror = "1.0.50"
time = {version = "0.3.30", features = ["macros"]}
itertools = "0.11.0"
